Создано с помощью Colaboratory

--- a/SQLAlchemy.ipynb
+++ b/SQLAlchemy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3yk6q1p2yyPUgD4tmFQ1h",
+      "authorship_tag": "ABX9TyNSxPdJaA/omis9ft28Xn5l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 207,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJgD6ppW07Uk",
-        "outputId": "e004eee1-450f-43b0-de5a-b6a372891c7b"
+        "outputId": "d129281a-f14f-4927-c3f2-13848710c9b4"
       },
       "outputs": [
         {
@@ -50,19 +50,17 @@
             "\n",
             "\n",
             "chats\n",
-            "+------+-----------+---------+----------------------------+\n",
-            "|   id |   user_id |  name   |         created_at         |\n",
-            "+======+===========+=========+============================+\n",
-            "|    1 |         1 | My Chat | 2023-11-13 00:50:33.675842 |\n",
-            "+------+-----------+---------+----------------------------+\n",
+            "+------+-----------+--------+--------------+\n",
+            "|  id  |  user_id  |  name  |  created_at  |\n",
+            "+======+===========+========+==============+\n",
+            "+------+-----------+--------+--------------+\n",
             "\n",
             "\n",
             "messages\n",
-            "+------+-----------+-----------+---------------+----------------------------+\n",
-            "|   id |   user_id |   chat_id |    message    |         created_at         |\n",
-            "+======+===========+===========+===============+============================+\n",
-            "|    1 |         1 |         1 | Hello, world! | 2023-11-13 00:50:33.676459 |\n",
-            "+------+-----------+-----------+---------------+----------------------------+\n",
+            "+------+-----------+-----------+-----------+--------------+\n",
+            "|  id  |  user_id  |  chat_id  |  message  |  created_at  |\n",
+            "+======+===========+===========+===========+==============+\n",
+            "+------+-----------+-----------+-----------+--------------+\n",
             "\n",
             "\n"
           ]
@@ -101,10 +99,9 @@
     {
       "cell_type": "code",
       "source": [
-        "import datetime\n",
-        "\n",
         "# Импортировать необходимые модули\n",
-        "from sqlalchemy import create_engine, MetaData, Table, Column, Integer, String, DateTime, Text, ForeignKey\n",
+        "from sqlalchemy import create_engine, MetaData, Table, Column, Integer, String, DateTime, Text, ForeignKey, delete, update, and_\n",
+        "import datetime\n",
         "\n",
         "# Создать engine для подключения к базе данных\n",
         "engine = create_engine(\"sqlite:///chat.db\")\n",
@@ -119,20 +116,22 @@
         "    Column(\"id\", Integer, primary_key=True),\n",
         "    Column(\"name\", String(255)),\n",
         ")\n",
+        "\n",
         "chats_table = Table(\n",
         "    \"chats\",\n",
         "    metadata,\n",
         "    Column(\"id\", Integer, primary_key=True),\n",
-        "    Column(\"user_id\", Integer, ForeignKey(\"users.id\")),\n",
+        "    Column(\"user_id\", Integer, ForeignKey(\"users.id\", ondelete=\"cascade\")),\n",
         "    Column(\"name\", String(255)),\n",
         "    Column(\"created_at\", DateTime, default=datetime.datetime.utcnow()),\n",
         ")\n",
+        "\n",
         "messages_table = Table(\n",
         "    \"messages\",\n",
         "    metadata,\n",
         "    Column(\"id\", Integer, primary_key=True),\n",
-        "    Column(\"user_id\", Integer, ForeignKey(\"users.id\")),\n",
-        "    Column(\"chat_id\", Integer, ForeignKey(\"chats.id\")),\n",
+        "    Column(\"user_id\", Integer, ForeignKey(\"users.id\", ondelete=\"cascade\")),\n",
+        "    Column(\"chat_id\", Integer, ForeignKey(\"chats.id\", ondelete=\"cascade\")),\n",
         "    Column(\"message\", Text),\n",
         "    Column(\"created_at\", DateTime, default=datetime.datetime.utcnow()),\n",
         ")\n",
@@ -188,15 +187,108 @@
         "        connection.execute(messages_table.insert(), [message])\n",
         "        connection.commit()\n",
         "\n",
+        "def delete_user(name):\n",
+        "    # Получить пользователя\n",
+        "    with engine.connect() as connection:\n",
+        "        user = connection.execute(\n",
+        "            users_table.select().where(users_table.c.name == name)\n",
+        "        ).fetchone()\n",
+        "\n",
+        "    # Удалить пользователя и все связанные с ним чаты и сообщения\n",
+        "    if user is not None:\n",
+        "        with engine.connect() as connection:\n",
+        "            connection.execute(delete(users_table).where(users_table.c.name == name))\n",
+        "            connection.execute(delete(chats_table).where(chats_table.c.user_id == user.id))\n",
+        "            connection.execute(delete(messages_table).where(messages_table.c.user_id == user.id))\n",
+        "            connection.commit()\n",
+        "\n",
+        "def delete_chat(user_name, chat_name):\n",
+        "    # Получить пользователя\n",
+        "    with engine.connect() as connection:\n",
+        "        user = connection.execute(\n",
+        "            users_table.select().where(users_table.c.name == user_name)\n",
+        "        ).fetchone()\n",
+        "\n",
+        "    # Проверить, существует ли пользователь\n",
+        "    if user is None:\n",
+        "        return\n",
+        "\n",
+        "\n",
+        "    # Получить чат\n",
+        "    with engine.connect() as connection:\n",
+        "        chat = connection.execute(\n",
+        "            chats_table.select().where(chats_table.c.name == chat_name)\n",
+        "        ).fetchone()\n",
+        "\n",
+        "    # Проверить, существует ли чат\n",
+        "    if chat is None:\n",
+        "        return\n",
+        "\n",
+        "    # # Удалить чат и все связанные с ним сообщения\n",
+        "    # if user is not None and chat is not None:\n",
+        "    with engine.connect() as connection:\n",
+        "        connection.execute(\n",
+        "            delete(chats_table).where(chats_table.c.id == chat.id)\n",
+        "        )\n",
+        "        connection.execute(\n",
+        "            delete(messages_table).where(messages_table.c.chat_id == chat.id)\n",
+        "        )\n",
+        "        connection.commit()\n",
+        "\n",
+        "\n",
+        "def delete_message(user_name, chat_name, message):\n",
+        "    # Получить пользователя\n",
+        "    with engine.connect() as connection:\n",
+        "        user = connection.execute(\n",
+        "            users_table.select().where(users_table.c.name == user_name)\n",
+        "        ).fetchone()\n",
+        "\n",
+        "    # Проверить, существует ли пользователь\n",
+        "    if user is None:\n",
+        "        return\n",
+        "\n",
+        "    # Получить чат\n",
+        "    with engine.connect() as connection:\n",
+        "        chat = connection.execute(\n",
+        "            chats_table.select().where(chats_table.c.name == chat_name)\n",
+        "        ).fetchone()\n",
+        "\n",
+        "    # Проверить, существует ли чат\n",
+        "    if chat is None:\n",
+        "        return\n",
+        "\n",
+        "    # Получить сообщение\n",
+        "    with engine.connect() as connection:\n",
+        "        message = connection.execute(\n",
+        "            messages_table.select().where(\n",
+        "                and_(\n",
+        "                    messages_table.c.user_id == user.id,\n",
+        "                    messages_table.c.chat_id == chat.id,\n",
+        "                    messages_table.c.message == message,\n",
+        "                )\n",
+        "            )\n",
+        "        ).fetchone()\n",
+        "\n",
+        "    # Удалить сообщение\n",
+        "    if message is not None:\n",
+        "        with engine.connect() as connection:\n",
+        "            connection.execute(\n",
+        "                delete(messages_table).where(messages_table.c.id == message.id)\n",
+        "            )\n",
+        "            connection.commit()\n",
+        "\n",
         "# Пример использования методов\n",
-        "add_user(\"John Doe\")\n",
-        "add_chat(\"John Doe\", \"My Chat\")\n",
-        "add_message(\"John Doe\", \"My Chat\", \"Hello, world!\")\n"
+        "# add_user(\"John Doe\")\n",
+        "# add_chat(\"John Doe\", \"My Chat\")\n",
+        "# add_message(\"John Doe\", \"My Chat\", \"Hello, world!\")\n",
+        "# delete_user(\"John Doe\")\n",
+        "delete_chat(\"John Doe\", \"My Chat\")\n",
+        "# delete_message(\"John Doe\", \"My Chat\", \"Hello, world!\")"
       ],
       "metadata": {
         "id": "Hqd48Xvo09YO"
       },
-      "execution_count": 104,
+      "execution_count": 206,
       "outputs": []
     }
   ]
