Создано с помощью Colaboratory

--- a/SQLAlchemy.ipynb
+++ b/SQLAlchemy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSxPdJaA/omis9ft28Xn5l",
+      "authorship_tag": "ABX9TyPez96eWkb5GRjpsgkH5QX8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": 223,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJgD6ppW07Uk",
-        "outputId": "d129281a-f14f-4927-c3f2-13848710c9b4"
+        "outputId": "6ef252f2-fe5e-4f3e-9369-291256f26d5b"
       },
       "outputs": [
         {
@@ -99,17 +99,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# Импортировать необходимые модули\n",
         "from sqlalchemy import create_engine, MetaData, Table, Column, Integer, String, DateTime, Text, ForeignKey, delete, update, and_\n",
         "import datetime\n",
         "\n",
-        "# Создать engine для подключения к базе данных\n",
         "engine = create_engine(\"sqlite:///chat.db\")\n",
         "\n",
-        "# Создать метамодель для базы данных\n",
+        "\n",
         "metadata = MetaData()\n",
         "\n",
-        "# Создать таблицы базы данных\n",
+        "\n",
         "users_table = Table(\n",
         "    \"users\",\n",
         "    metadata,\n",
@@ -136,159 +134,139 @@
         "    Column(\"created_at\", DateTime, default=datetime.datetime.utcnow()),\n",
         ")\n",
         "\n",
-        "# Добавить таблицы в базу данных\n",
+        "\n",
         "metadata.create_all(engine)\n",
         "\n",
-        "# Метод добавления пользователя\n",
+        "\n",
         "def add_user(name):\n",
-        "    # Создать пользователя\n",
-        "    user = {\"name\": name}\n",
-        "\n",
-        "    # Добавить пользователя в базу данных\n",
-        "    with engine.connect() as connection:\n",
-        "        connection.execute(users_table.insert(), [user])\n",
-        "        connection.commit()\n",
-        "\n",
-        "# Метод добавления нового чата по имени пользователя и названию чата с помощью join\n",
-        "def add_chat(user_name, chat_name):\n",
-        "    # Получить пользователя\n",
-        "    with engine.connect() as connection:\n",
-        "        user = connection.execute(\n",
-        "            users_table.select().where(users_table.c.name == user_name)\n",
-        "        ).fetchone()\n",
-        "\n",
-        "    # Создать новый чат\n",
-        "    chat = {\"name\": chat_name, \"user_id\": user.id}\n",
-        "\n",
-        "    # Добавить чат в базу данных\n",
-        "    with engine.connect() as connection:\n",
-        "        connection.execute(chats_table.insert(), [chat])\n",
-        "        connection.commit()\n",
-        "\n",
-        "# Метод добавления нового сообщения по имени пользователя и названию чата с помощью join\n",
-        "def add_message(user_name, chat_name, message):\n",
-        "    # Получить пользователя\n",
-        "    with engine.connect() as connection:\n",
-        "        user = connection.execute(\n",
-        "            users_table.select().where(users_table.c.name == user_name)\n",
-        "        ).fetchone()\n",
-        "\n",
-        "    # Получить чат\n",
-        "    with engine.connect() as connection:\n",
-        "        chat = connection.execute(\n",
-        "            chats_table.select().where(chats_table.c.name == chat_name)\n",
-        "        ).fetchone()\n",
-        "\n",
-        "    # Создать новое сообщение\n",
-        "    message = {\"chat_id\": chat.id, \"user_id\": user.id, \"message\": message}\n",
-        "\n",
-        "    # Добавить сообщение в базу данных\n",
-        "    with engine.connect() as connection:\n",
-        "        connection.execute(messages_table.insert(), [message])\n",
-        "        connection.commit()\n",
-        "\n",
-        "def delete_user(name):\n",
-        "    # Получить пользователя\n",
         "    with engine.connect() as connection:\n",
         "        user = connection.execute(\n",
         "            users_table.select().where(users_table.c.name == name)\n",
         "        ).fetchone()\n",
+        "        if user is not None:\n",
+        "            return\n",
+        "        else:\n",
+        "            user = {\"name\": name}\n",
+        "            connection.execute(users_table.insert(), [user])\n",
+        "            connection.commit()\n",
         "\n",
-        "    # Удалить пользователя и все связанные с ним чаты и сообщения\n",
-        "    if user is not None:\n",
-        "        with engine.connect() as connection:\n",
+        "\n",
+        "def add_chat(user_name, chat_name):\n",
+        "    with engine.connect() as connection:\n",
+        "        chat = connection.execute(\n",
+        "            chats_table.select().where(\n",
+        "                and_(\n",
+        "                    chats_table.c.name == chat_name,\n",
+        "                    chats_table.c.user_id == connection.execute(\n",
+        "                        users_table.select().where(users_table.c.name == user_name)\n",
+        "                    ).fetchone().id,\n",
+        "                )\n",
+        "            )\n",
+        "        ).fetchone()\n",
+        "        if chat is not None:\n",
+        "            return\n",
+        "        else:\n",
+        "            user = connection.execute(\n",
+        "                users_table.select().where(users_table.c.name == user_name)\n",
+        "            ).fetchone()\n",
+        "            chat = {\"name\": chat_name, \"user_id\": user.id}\n",
+        "            connection.execute(chats_table.insert(), [chat])\n",
+        "            connection.commit()\n",
+        "\n",
+        "\n",
+        "def add_message(user_name, chat_name, message):\n",
+        "    with engine.connect() as connection:\n",
+        "        user = connection.execute(\n",
+        "            users_table.select().where(users_table.c.name == user_name)\n",
+        "        ).fetchone()\n",
+        "        chat = connection.execute(\n",
+        "            chats_table.select().where(chats_table.c.name == chat_name)\n",
+        "        ).fetchone()\n",
+        "        message = {\"chat_id\": chat.id, \"user_id\": user.id, \"message\": message}\n",
+        "        connection.execute(messages_table.insert(), [message])\n",
+        "        connection.commit()\n",
+        "\n",
+        "\n",
+        "def delete_user(name):\n",
+        "    with engine.connect() as connection:\n",
+        "        user = connection.execute(\n",
+        "            users_table.select().where(users_table.c.name == name)\n",
+        "        ).fetchone()\n",
+        "        if user is None:\n",
+        "            return\n",
+        "        else:\n",
         "            connection.execute(delete(users_table).where(users_table.c.name == name))\n",
         "            connection.execute(delete(chats_table).where(chats_table.c.user_id == user.id))\n",
         "            connection.execute(delete(messages_table).where(messages_table.c.user_id == user.id))\n",
         "            connection.commit()\n",
         "\n",
+        "\n",
         "def delete_chat(user_name, chat_name):\n",
-        "    # Получить пользователя\n",
         "    with engine.connect() as connection:\n",
         "        user = connection.execute(\n",
         "            users_table.select().where(users_table.c.name == user_name)\n",
         "        ).fetchone()\n",
-        "\n",
-        "    # Проверить, существует ли пользователь\n",
-        "    if user is None:\n",
-        "        return\n",
-        "\n",
-        "\n",
-        "    # Получить чат\n",
-        "    with engine.connect() as connection:\n",
-        "        chat = connection.execute(\n",
-        "            chats_table.select().where(chats_table.c.name == chat_name)\n",
-        "        ).fetchone()\n",
-        "\n",
-        "    # Проверить, существует ли чат\n",
-        "    if chat is None:\n",
-        "        return\n",
-        "\n",
-        "    # # Удалить чат и все связанные с ним сообщения\n",
-        "    # if user is not None and chat is not None:\n",
-        "    with engine.connect() as connection:\n",
-        "        connection.execute(\n",
-        "            delete(chats_table).where(chats_table.c.id == chat.id)\n",
-        "        )\n",
-        "        connection.execute(\n",
-        "            delete(messages_table).where(messages_table.c.chat_id == chat.id)\n",
-        "        )\n",
-        "        connection.commit()\n",
+        "        if user is None:\n",
+        "            return\n",
+        "        else:\n",
+        "            chat = connection.execute(\n",
+        "                chats_table.select().where(chats_table.c.name == chat_name)\n",
+        "            ).fetchone()\n",
+        "            if chat is None:\n",
+        "                return\n",
+        "            else:\n",
+        "                connection.execute(\n",
+        "                    delete(chats_table).where(chats_table.c.id == chat.id)\n",
+        "                )\n",
+        "                connection.execute(\n",
+        "                    delete(messages_table).where(messages_table.c.chat_id == chat.id)\n",
+        "                )\n",
+        "                connection.commit()\n",
         "\n",
         "\n",
         "def delete_message(user_name, chat_name, message):\n",
-        "    # Получить пользователя\n",
         "    with engine.connect() as connection:\n",
         "        user = connection.execute(\n",
         "            users_table.select().where(users_table.c.name == user_name)\n",
         "        ).fetchone()\n",
+        "        if user is None:\n",
+        "            return\n",
+        "        else:\n",
+        "            chat = connection.execute(\n",
+        "                chats_table.select().where(chats_table.c.name == chat_name)\n",
+        "            ).fetchone()\n",
+        "            if chat is None:\n",
+        "                return\n",
+        "            else:\n",
+        "                message = connection.execute(\n",
+        "                    messages_table.select().where(\n",
+        "                        and_(\n",
+        "                            messages_table.c.user_id == user.id,\n",
+        "                            messages_table.c.chat_id == chat.id,\n",
+        "                            messages_table.c.message == message,\n",
+        "                        )\n",
+        "                    )\n",
+        "                ).fetchone()\n",
+        "                if message is not None:\n",
+        "                    connection.execute(\n",
+        "                        delete(messages_table).where(messages_table.c.id == message.id)\n",
+        "                    )\n",
+        "                    connection.commit()\n",
         "\n",
-        "    # Проверить, существует ли пользователь\n",
-        "    if user is None:\n",
-        "        return\n",
         "\n",
-        "    # Получить чат\n",
-        "    with engine.connect() as connection:\n",
-        "        chat = connection.execute(\n",
-        "            chats_table.select().where(chats_table.c.name == chat_name)\n",
-        "        ).fetchone()\n",
-        "\n",
-        "    # Проверить, существует ли чат\n",
-        "    if chat is None:\n",
-        "        return\n",
-        "\n",
-        "    # Получить сообщение\n",
-        "    with engine.connect() as connection:\n",
-        "        message = connection.execute(\n",
-        "            messages_table.select().where(\n",
-        "                and_(\n",
-        "                    messages_table.c.user_id == user.id,\n",
-        "                    messages_table.c.chat_id == chat.id,\n",
-        "                    messages_table.c.message == message,\n",
-        "                )\n",
-        "            )\n",
-        "        ).fetchone()\n",
-        "\n",
-        "    # Удалить сообщение\n",
-        "    if message is not None:\n",
-        "        with engine.connect() as connection:\n",
-        "            connection.execute(\n",
-        "                delete(messages_table).where(messages_table.c.id == message.id)\n",
-        "            )\n",
-        "            connection.commit()\n",
         "\n",
         "# Пример использования методов\n",
         "# add_user(\"John Doe\")\n",
         "# add_chat(\"John Doe\", \"My Chat\")\n",
         "# add_message(\"John Doe\", \"My Chat\", \"Hello, world!\")\n",
         "# delete_user(\"John Doe\")\n",
-        "delete_chat(\"John Doe\", \"My Chat\")\n",
+        "# delete_chat(\"John Doe\", \"My Chat\")\n",
         "# delete_message(\"John Doe\", \"My Chat\", \"Hello, world!\")"
       ],
       "metadata": {
         "id": "Hqd48Xvo09YO"
       },
-      "execution_count": 206,
+      "execution_count": 224,
       "outputs": []
     }
   ]
