Создано с помощью Colaboratory

--- a/chat_database.ipynb
+++ b/chat_database.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyON1PBL02MNh8km4g0vu2t7",
+      "authorship_tag": "ABX9TyMGspZX8Y6dPpSQYDPYQLDR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 247,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJgD6ppW07Uk",
-        "outputId": "f6a90038-2036-4f28-daea-63714f9ec9ac"
+        "outputId": "3674f766-2153-4696-943c-7e268c413623"
       },
       "outputs": [
         {
@@ -42,24 +42,27 @@
           "name": "stdout",
           "text": [
             "users\n",
-            "+------+--------+\n",
-            "|  id  |  name  |\n",
-            "+======+========+\n",
-            "+------+--------+\n",
+            "+------+------------+\n",
+            "|   id |  username  |\n",
+            "+======+============+\n",
+            "|    2 |  John Doe  |\n",
+            "+------+------------+\n",
             "\n",
             "\n",
             "chats\n",
-            "+------+-----------+--------+--------------+\n",
-            "|  id  |  user_id  |  name  |  created_at  |\n",
-            "+======+===========+========+==============+\n",
-            "+------+-----------+--------+--------------+\n",
+            "+------+-----------+------------+---------------------+\n",
+            "|   id |   user_id |  chatname  |     created_at      |\n",
+            "+======+===========+============+=====================+\n",
+            "|    2 |         2 |  My Chat   | 2023-11-13 03:42:15 |\n",
+            "+------+-----------+------------+---------------------+\n",
             "\n",
             "\n",
             "messages\n",
-            "+------+-----------+-----------+-----------+--------------+\n",
-            "|  id  |  user_id  |  chat_id  |  message  |  created_at  |\n",
-            "+======+===========+===========+===========+==============+\n",
-            "+------+-----------+-----------+-----------+--------------+\n",
+            "+------+-----------+-----------+---------------+---------------------+\n",
+            "|   id |   user_id |   chat_id |    message    |     created_at      |\n",
+            "+======+===========+===========+===============+=====================+\n",
+            "|    2 |         2 |         2 | Hello, world! | 2023-11-13 03:42:15 |\n",
+            "+------+-----------+-----------+---------------+---------------------+\n",
             "\n",
             "\n"
           ]
@@ -80,7 +83,6 @@
         "        cursor = connection.cursor()\n",
         "        cursor.execute(f'SELECT * FROM {tablename}')\n",
         "        results = cursor.fetchall()\n",
-        "        # print(results)\n",
         "        headers = []\n",
         "        for i in range(len(cursor.description)):\n",
         "          headers.append(cursor.description[i][0])\n",
@@ -106,7 +108,7 @@
         "        \"\"\"\n",
         "        CREATE TABLE IF NOT EXISTS users (\n",
         "            id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "            name TEXT NOT NULL\n",
+        "            username TEXT NOT NULL\n",
         "        )\n",
         "        \"\"\"\n",
         "    )\n",
@@ -115,7 +117,7 @@
         "        CREATE TABLE IF NOT EXISTS chats (\n",
         "            id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
         "            user_id INTEGER NOT NULL,\n",
-        "            name TEXT NOT NULL,\n",
+        "            chatname TEXT NOT NULL,\n",
         "            created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,\n",
         "            FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE\n",
         "        )\n",
@@ -137,65 +139,64 @@
         "    connection.commit()\n",
         "\n",
         "\n",
-        "def add_user(name):\n",
+        "def add_user(username):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"INSERT INTO users (name) VALUES (?)\", (name,))\n",
+        "    cursor.execute(\"INSERT INTO users (username) VALUES (?)\", (username,))\n",
         "    connection.commit()\n",
         "\n",
-        "def add_chat(user_name, chat_name):\n",
+        "def add_chat(username, chatname):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    user_id = cursor.execute(\"SELECT id FROM users WHERE name = ?\", (user_name,)).fetchone()[0]\n",
-        "    cursor.execute(\"INSERT INTO chats (user_id, name) VALUES (?, ?)\", (user_id, chat_name,))\n",
+        "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
+        "    cursor.execute(\"INSERT INTO chats (user_id, chatname) VALUES (?, ?)\", (user_id, chatname,))\n",
         "    connection.commit()\n",
         "\n",
-        "def add_message(user_name, chat_name, message):\n",
+        "def add_message(username, chatname, message):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    user_id = cursor.execute(\"SELECT id FROM users WHERE name = ?\", (user_name,)).fetchone()[0]\n",
-        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE name = ?\", (chat_name,)).fetchone()[0]\n",
+        "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
+        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()[0]\n",
         "    cursor.execute(\"INSERT INTO messages (user_id, chat_id, message) VALUES (?, ?, ?)\", (user_id, chat_id, message,))\n",
         "    connection.commit()\n",
         "\n",
-        "\n",
-        "def delete_user(name):\n",
+        "def delete_user(username):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"DELETE FROM users WHERE name = ?\", (name,))\n",
+        "    cursor.execute(\"DELETE FROM users WHERE username = ?\", (username,))\n",
         "    connection.commit()\n",
         "\n",
-        "def delete_chat(user_name, chat_name):\n",
+        "def delete_chat(username, chatname):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    user_id = cursor.execute(\"SELECT id FROM users WHERE name = ?\", (user_name,)).fetchone()[0]\n",
-        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE name = ?\", (chat_name,)).fetchone()[0]\n",
+        "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
+        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()[0]\n",
         "    cursor.execute(\"DELETE FROM messages WHERE chat_id = ?\", (chat_id,))\n",
         "    cursor.execute(\"DELETE FROM chats WHERE id = ?\", (chat_id,))\n",
         "    connection.commit()\n",
         "\n",
-        "def delete_message(user_name, chat_name, message):\n",
+        "def delete_message(username, chatname, message):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    user_id = cursor.execute(\"SELECT id FROM users WHERE name = ?\", (user_name,)).fetchone()[0]\n",
-        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE name = ?\", (chat_name,)).fetchone()[0]\n",
+        "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
+        "    chat_id = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()[0]\n",
         "    cursor.execute(\"DELETE FROM messages WHERE user_id = ? AND chat_id = ? AND message = ?\", (user_id, chat_id, message,))\n",
         "    connection.commit()\n",
         "\n",
         "\n",
         "create_db()\n",
         "\n",
-        "# add_user(\"John Doe\")\n",
-        "# add_chat(\"John Doe\", \"My Chat\")\n",
-        "# add_message(\"John Doe\", \"My Chat\", \"Hello, world!\")\n",
-        "delete_user(\"John Doe\")\n",
+        "add_user(\"John Doe\")\n",
+        "add_chat(\"John Doe\", \"My Chat\")\n",
+        "add_message(\"John Doe\", \"My Chat\", \"Hello, world!\")\n",
+        "# delete_user(\"John Doe\")\n",
         "# delete_chat(\"John Doe\", \"My Chat\")\n",
         "# delete_message(\"John Doe\", \"My Chat\", \"Hello, world!\")\n"
       ],
       "metadata": {
         "id": "Hqd48Xvo09YO"
       },
-      "execution_count": 246,
+      "execution_count": 10,
       "outputs": []
     }
   ]
