Создано с помощью Colaboratory

--- a/chat_database.ipynb
+++ b/chat_database.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGspZX8Y6dPpSQYDPYQLDR",
+      "authorship_tag": "ABX9TyOSOGOcO6HV3MiQ9Q9IAaO5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJgD6ppW07Uk",
-        "outputId": "3674f766-2153-4696-943c-7e268c413623"
+        "outputId": "6d3f8202-c108-4e95-9178-3fe3d6dc1239"
       },
       "outputs": [
         {
@@ -45,7 +45,9 @@
             "+------+------------+\n",
             "|   id |  username  |\n",
             "+======+============+\n",
-            "|    2 |  John Doe  |\n",
+            "|    1 |    Ivan    |\n",
+            "+------+------------+\n",
+            "|    2 |    Kate    |\n",
             "+------+------------+\n",
             "\n",
             "\n",
@@ -53,16 +55,15 @@
             "+------+-----------+------------+---------------------+\n",
             "|   id |   user_id |  chatname  |     created_at      |\n",
             "+======+===========+============+=====================+\n",
-            "|    2 |         2 |  My Chat   | 2023-11-13 03:42:15 |\n",
+            "|    3 |         1 |  My Chat   | 2023-11-13 04:07:04 |\n",
             "+------+-----------+------------+---------------------+\n",
             "\n",
             "\n",
             "messages\n",
-            "+------+-----------+-----------+---------------+---------------------+\n",
-            "|   id |   user_id |   chat_id |    message    |     created_at      |\n",
-            "+======+===========+===========+===============+=====================+\n",
-            "|    2 |         2 |         2 | Hello, world! | 2023-11-13 03:42:15 |\n",
-            "+------+-----------+-----------+---------------+---------------------+\n",
+            "+------+-----------+-----------+-----------+--------------+\n",
+            "|  id  |  user_id  |  chat_id  |  message  |  created_at  |\n",
+            "+======+===========+===========+===========+==============+\n",
+            "+------+-----------+-----------+-----------+--------------+\n",
             "\n",
             "\n"
           ]
@@ -139,18 +140,29 @@
         "    connection.commit()\n",
         "\n",
         "\n",
+        "\n",
         "def add_user(username):\n",
-        "  with sqlite3.connect(db) as connection:\n",
-        "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"INSERT INTO users (username) VALUES (?)\", (username,))\n",
-        "    connection.commit()\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        user = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()\n",
+        "        if user is not None:\n",
+        "            print(\"Пользователь существует\")\n",
+        "            return\n",
+        "        cursor.execute(\"INSERT INTO users (username) VALUES (?)\", (username,))\n",
+        "        connection.commit()\n",
+        "\n",
         "\n",
         "def add_chat(username, chatname):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
+        "    chat = cursor.execute(\"SELECT id FROM chats WHERE chatname = ?\", (chatname,)).fetchone()\n",
+        "    if chat is not None:\n",
+        "        print(\"Чат существует\")\n",
+        "        return\n",
         "    user_id = cursor.execute(\"SELECT id FROM users WHERE username = ?\", (username,)).fetchone()[0]\n",
         "    cursor.execute(\"INSERT INTO chats (user_id, chatname) VALUES (?, ?)\", (user_id, chatname,))\n",
         "    connection.commit()\n",
+        "\n",
         "\n",
         "def add_message(username, chatname, message):\n",
         "  with sqlite3.connect(db) as connection:\n",
@@ -160,11 +172,13 @@
         "    cursor.execute(\"INSERT INTO messages (user_id, chat_id, message) VALUES (?, ?, ?)\", (user_id, chat_id, message,))\n",
         "    connection.commit()\n",
         "\n",
+        "\n",
         "def delete_user(username):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
         "    cursor.execute(\"DELETE FROM users WHERE username = ?\", (username,))\n",
         "    connection.commit()\n",
+        "\n",
         "\n",
         "def delete_chat(username, chatname):\n",
         "  with sqlite3.connect(db) as connection:\n",
@@ -174,6 +188,7 @@
         "    cursor.execute(\"DELETE FROM messages WHERE chat_id = ?\", (chat_id,))\n",
         "    cursor.execute(\"DELETE FROM chats WHERE id = ?\", (chat_id,))\n",
         "    connection.commit()\n",
+        "\n",
         "\n",
         "def delete_message(username, chatname, message):\n",
         "  with sqlite3.connect(db) as connection:\n",
@@ -186,17 +201,23 @@
         "\n",
         "create_db()\n",
         "\n",
-        "add_user(\"John Doe\")\n",
-        "add_chat(\"John Doe\", \"My Chat\")\n",
-        "add_message(\"John Doe\", \"My Chat\", \"Hello, world!\")\n",
-        "# delete_user(\"John Doe\")\n",
-        "# delete_chat(\"John Doe\", \"My Chat\")\n",
-        "# delete_message(\"John Doe\", \"My Chat\", \"Hello, world!\")\n"
+        "# add_user(\"Ivan\")\n",
+        "# add_chat(\"Ivan\", \"My Chat\")\n",
+        "# add_message(\"Ivan\", \"My Chat\", \"Hello, world!\")\n",
+        "# add_user(\"Kate\")\n",
+        "# add_chat(\"Kate\", \"My Chat\")\n",
+        "# add_message(\"Kate\", \"My Chat\", \"Hello, world!\")\n",
+        "# delete_user(\"Ivan\")\n",
+        "# delete_chat(\"Ivan\", \"My Chat\")\n",
+        "# delete_message(\"Ivan\", \"My Chat\", \"Hello, world!\")\n",
+        "# delete_user(\"Kate\")\n",
+        "# delete_chat(\"Kate\", \"My Chat\")\n",
+        "# delete_message(\"Kate\", \"My Chat\", \"Hello, world!\")"
       ],
       "metadata": {
         "id": "Hqd48Xvo09YO"
       },
-      "execution_count": 10,
+      "execution_count": 54,
       "outputs": []
     }
   ]
